tests/compilation_tests/03_fail_type_mismatch2.stderr
error[E0308]: arguments to this function are incorrect
  --> tests/compilation_tests/03_fail_type_mismatch2.rs:10:5
   |
10 |     InputTensor::set(SequenceLength(2), BatchSize(2)).unwrap();
   |     ^^^^^^^^^^^^^^^^ -----------------  ------------ expected `SequenceLength`, found `BatchSize`
   |                      |
   |                      expected `BatchSize`, found `SequenceLength`
   |
note: associated function defined here
  --> tests/compilation_tests/03_fail_type_mismatch2.rs:5:1
   |
5  | tensor_type!(InputTensor, [BatchSize, SequenceLength]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: swap these arguments
   |
10 |     InputTensor::set(BatchSize(2), SequenceLength(2)).unwrap();
   |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
